--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,16 +13,19 @@ on:
 
 jobs:
   unit_tests:
-    runs-on: ubuntu-latest
     strategy:
-      max-parallel: 2
+      max-parallel: 4
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version:
           - "3.7"
+          - "3.8"
+          - "3.9"
           - "3.10"
 
-    name: Check Python ${{ matrix.python-version }}
+    name: Check Python ${{ matrix.python-version }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
 
