--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,9 @@ on:
 jobs:
   unit_tests:
     strategy:
-      max-parallel: 4
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version:
           - "3.7"
           - "3.8"
@@ -33,6 +32,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+      
+      - name: Install docker-compose
+        run: brew install docker-compose
+        if: ${{ startsWith(${{ matrix.os }}, 'macos') }}
       
       - name: Build the stack
         run: docker-compose up -d mysql
