--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install and start Docker
         run: |
           brew install docker-machine docker docker-compose
-          sudo docker –version
+          sudo docker -–version
         if: ${{ startsWith(matrix.os, 'macos') }}
       
       - name: Build the stack
