[DAT-3282] Change starting of Docker in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install and start Docker
         run: |
           brew install docker-machine docker docker-compose
-          sudo docker -v
+          docker-machine start
         if: ${{ startsWith(matrix.os, 'macos') }}
       
       - name: Build the stack
