--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,12 @@ jobs:
           - "3.8"
           - "3.9"
           - "3.10"
+        db-conn: [
+          {db: mysql, conn: mysql://mysql:Password1@localhost/mysql},
+          {db: postgres, conn: postgres://postgres:Password1@localhost/postgres}
+        ]
 
-    name: Check Python ${{ matrix.python-version }} on ${{ matrix.os }}
+    name: Check Python ${{ matrix.python-version }} on ${{ matrix.os }} for ${{ matrix.db-conn.db }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -44,3 +48,5 @@ jobs:
       
       - name: Run unit tests
         run: poetry run python3 -m unittest
+        env: 
+          TEST_CONN_STRING: ${{ matrix.db-conn.conn }}
