--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ preql = { version = "^0.2.13", optional = true }
 psycopg2 = { version = "*", optional = true }
 mysql-connector-python = { version = "*", optional = true}
 snowflake-connector-python = { version = "*", optional = true }
+textual = { version = "*", optional = true }
 
 [tool.poetry.dev-dependencies]
 mysql-connector-python = "*"
