updated for ssl support (presto) and role configs etc (snowflake)

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,9 @@ mysqltuner.pl
 
 # Mac
 .DS_Store
+/.idea/.gitignore
+/.idea/data-diff.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
