--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,7 @@ jobs:
             DATADIFF_SNOWFLAKE_URI: '${{ secrets.DATADIFF_SNOWFLAKE_URI }}'
             DATADIFF_PRESTO_URI: '${{ secrets.DATADIFF_PRESTO_URI }}'
             DATADIFF_TRINO_URI: '${{ secrets.DATADIFF_TRINO_URI }}'
-        run: poetry run unittest-parallel -j 16
+        run:
+            echo $DATADIFF_PRESTO_URI
+            echo $DATADIFF_TRINO_URI
+            poetry run unittest-parallel -j 16 -f
