--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ snowflake-connector-python = "*"
 trino = "^0.314.0"
 psycopg2 = "*"
 presto-python-client = "*"
+pyexasol = "^0.24.0"
 
 [tool.poetry.extras]
 # When adding, update also: README + dev deps just above
@@ -51,6 +52,7 @@ presto = ["presto-python-client"]
 oracle = ["cx_Oracle"]
 databricks = ["databricks-sql-connector"]
 trino = ["trino"]
+exasol = ["pyexasol"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
