--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ presto-python-client = "*"
 clickhouse-driver = "*"
 vertica-python = "*"
 duckdb = "^0.6.0"
+cx_Oracle = "*"
 # google-cloud-bigquery = "*"
 # databricks-sql-connector = "*"
 
