--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ click = "^8.1"
 rich = "*"
 toml = "^0.10.2"
 sqeleton = "^0.0.5"
+pandas = "^1.5.0"
+tabulate = "^0.9.0"
 mysql-connector-python = {version="8.0.29", optional=true}
 psycopg2 = {version="*", optional=true}
 snowflake-connector-python = {version="^2.7.2", optional=true}
