--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ duckdb = {version="*", optional=true}
 dbt-artifacts-parser = {version="^0.4.2"}
 dbt-core = {version="^1.0.0"}
 keyring = "*"
-tabulate = "^0.9.0"
+tabulate = ">=0.8.0,<0.10.0"
 preql = {version="^0.2.19", optional=true}
 vertica-python = {version="*", optional=true}
 urllib3 = "<2"
