--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,15 +21,15 @@ classifiers = [
 ]
 packages = [{ include = "data_diff" }]
 [tool.poetry.dependencies]
-pydantic = "1.10.12"
+pydantic = ">=1.10.12"
 python = "^3.8.0"
 dsnparse = "<0.2.0"
 click = "^8.1"
 rich = "*"
 toml = "^0.10.2"
-mysql-connector-python = {version="8.0.29", optional=true}
+mysql-connector-python = {version=">=8.0.29", optional=true}
 psycopg2 = {version="*", optional=true}
-snowflake-connector-python = {version = ">=3.0.2,<4.0.0", optional=true}
+snowflake-connector-python = {version = "^3.0.2", optional=true}
 cryptography = {version="*", optional=true}
 trino = {version="^0.314.0", optional=true}
 presto-python-client = {version="*", optional=true}
