--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ vertica-python = "*"
 duckdb = "^0.9.0"
 dbt-core = "^1.0.0"
 ruff = "^0.1.4"
+pyodbc = "*"
 # google-cloud-bigquery = "*"
 # databricks-sql-connector = "*"
 
