motherduck test configs

--- a/tests/dbt_artifacts/profiles.yml
+++ b/tests/dbt_artifacts/profiles.yml
@@ -7,5 +7,5 @@ jaffle_shop:
       schema: dev
     different_dev:
       type: duckdb
-      path: "./tests/dbt_artifacts/jaffle_shop.duckdb"
+      path: 'md:jaffle_shop?motherduck_token={{ env_var("MOTHERDUCK_TOKEN") }}'
       schema: "{{ env_var('some_env_var') }}"
