--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ psycopg2 = "*"
 snowflake-connector-python = ">=3.0.2,<4.0.0"
 cryptography = "*"
 trino = "^0.314.0"
-presto-python-client = "*"
+presto-python-client = "0.8.3"
 clickhouse-driver = "*"
 vertica-python = "*"
 duckdb = "^0.9.0"
