--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -22,7 +22,7 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
 
       # This is used for forked PRs as write permissions are required to format files
-      - name: Suggest ruff formatting (you must run and commit changes with `ruff format .` locally on your forked branch to fix errors if they appear)
+      - name: Run and commit changes with `ruff format .` locally on your forked branch to fix errors if they appear
         if: ${{ github.event.pull_request.head.repo.fork == true }}
         uses: chartboost/ruff-action@v1
         id: ruff_formatter_suggestions
