--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ preql = {version="^0.2.19", optional=true}
 vertica-python = {version="*", optional=true}
 urllib3 = "<2"
 oracledb = {version = "*", optional=true}
-pyodbc = {version="^4.0.39", optional=true}
+pyodbc = {version=">=4.0.39", optional=true}
 typing-extensions = ">=4.0.1"
 attrs = "^23.1.0"
 mashumaro = {version = ">=2.9,<3.11.0", extras = ["msgpack"]}
@@ -80,6 +80,10 @@ trino = ["trino"]
 clickhouse = ["clickhouse-driver"]
 vertica = ["vertica-python"]
 duckdb = ["duckdb"]
+with_everything = [
+    "preql", "mysql-connector-python", "psycopg2", "snowflake-connector-python", "cryptography", "presto-python-client",
+    "oracledb", "pyodbc", "trino", "clickhouse-driver", "vertica-python", "duckdb"
+]
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
